Create a completely flexible modal.
By forcing the modal to occupy a percentage of the viewport, we are effectively eliminating the utility of dragging or resizing the modal. Because of this, we'll use a simple CSS-based modal over jQuery UI.


git-svn-id: https://plugins.svn.wordpress.org/mosaic/branches/dev@589543 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/mosaic.css
+++ b/css/mosaic.css
@@ -1,3 +1,61 @@
+/**
+ * Modal
+ */
+.media-modal {
+	position: fixed;
+	top: 5%;
+	left: 5%;
+	right: 5%;
+	bottom: 5%;
+	background: #fff;
+	z-index: 125000;
+}
+
+.media-modal-backdrop {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: #000;
+	opacity: 0.8;
+	z-index: 120000;
+}
+
+.media-modal-header {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	height: 28px;
+	background: #f1f1f1;
+}
+
+.media-modal-header h3 {
+	float: left;
+	padding: 0 0 0 10px;
+	margin: 0;
+	line-height: 28px;
+}
+
+.media-modal-close {
+	float: right;
+	padding-right: 10px;
+	line-height: 28px;
+}
+
+.media-modal-content {
+	position: absolute;
+	top: 28px;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	overflow: auto;
+}
+
+/**
+ * Attachments
+ */
 .attachment img {
 	width: 300px;
 	height: 200px;
