--- a/css/mosaic.css
+++ b/css/mosaic.css
@@ -82,11 +82,12 @@
 
 .attachments ul {
 	position: absolute;
-	top: 40px;
+	top: 50px;
 	left: 0;
 	right: 0;
 	bottom: 0;
 	overflow: auto;
+	margin: 0 10px 20px;
 }
 
 /**
@@ -99,7 +100,7 @@
 	height: 200px;
 
 	padding: 0;
-	margin: 8px;
+	margin: 0 10px 20px;
 }
 
 .attachment-thumbnail {
