--- a/css/mosaic.css
+++ b/css/mosaic.css
@@ -57,6 +57,11 @@
  * Attachments
  */
 
+.attachments {
+	width: 100%;
+	height: 100%;
+}
+
 .attachments-header {
 	position: absolute;
 	top: 0;
@@ -114,6 +119,8 @@
 
 .attachment img {
 	display: block;
+	max-height: 200px;
+	max-width: 200px;
 
 	/* Vertically center the thumbnails. */
 	position: absolute;
@@ -129,7 +136,7 @@
 	box-shadow: inset 0 0 0 1px rgba( 0, 0, 0, 0.4 );
 }
 
-.attachment .portrait img {
+/*.attachment .portrait img {
 	width: 200px;
 }
 .attachment .landscape img {
@@ -140,4 +147,4 @@
 	width: auto;
 	max-height: 200px;
 	max-width: 200px;
-}
+}*/
