--- a/css/mosaic.css
+++ b/css/mosaic.css
@@ -54,6 +54,62 @@
 }
 
 /**
+ * Workspace
+ */
+
+.media-workspace {
+	position: relative;
+	width: 100%;
+	height: 100%;
+}
+
+.upload-attachments {
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	width: 180px;
+	margin: 10px;
+	text-align: center;
+	border: 3px dashed #dfdfdf;
+	background: #fff;
+	z-index: 100;
+}
+
+.upload-attachments h3 {
+	font-size: 18px;
+	font-weight: 200;
+	color: #777;
+	padding: 40px 0 0;
+	margin: 0;
+}
+
+.upload-attachments span {
+	display: block;
+	color: #777;
+	margin: 10px 0;
+}
+
+.upload-attachments a {
+	display: inline-block;
+	margin: 0 auto;
+}
+
+.drag-over .upload-attachments {
+	width: auto;
+	right: 0;
+	border-color: #83B4D8;
+}
+
+.existing-attachments {
+	position: absolute;
+	top: 0;
+	left: 200px;
+	right: 0;
+	bottom: 0;
+}
+
+/**
  * Attachments
  */
 
