--- a/css/mosaic.css
+++ b/css/mosaic.css
@@ -193,7 +193,28 @@
 	box-shadow: inset 0 0 0 1px rgba( 0, 0, 0, 0.4 );
 }
 
-/*.attachment .portrait img {
+
+/* Square crop with overflow visible on hover. */
+/*
+.attachment .portrait img {
+	width: 200px;
+}
+.attachment .landscape img {
+	height: 200px;
+}
+.attachment .attachment-thumbnail:hover {
+	overflow: visible;
+	z-index: 1000;
+}
+.attachment .attachment-thumbnail:hover img {
+	border: 10px solid #fff;
+	box-shadow: 0 0 10px rgba( 0, 0, 0, 0.4 );
+}*/
+
+
+/* Square crop with resized image on hover. */
+/*
+.attachment .portrait img {
 	width: 200px;
 }
 .attachment .landscape img {
