Tweak padding on the modal.
git-svn-id: https://plugins.svn.wordpress.org/mosaic/branches/dev@591656 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/mosaic.css
+++ b/css/mosaic.css
@@ -3,10 +3,10 @@
  */
 .media-modal {
 	position: fixed;
-	top: 5%;
-	left: 5%;
-	right: 5%;
-	bottom: 5%;
+	top: 60px;
+	left: 60px;
+	right: 60px;
+	bottom: 60px;
 	background: #fff;
 	z-index: 125000;
 }
