--- a/css/mosaic.css
+++ b/css/mosaic.css
@@ -226,3 +226,38 @@
 	max-height: 200px;
 	max-width: 200px;
 }*/
+
+
+/**
+ * Progress Bar
+ */
+.media-progress-bar {
+	position: relative;
+	height: 8px;
+	width: 70%;
+	margin: 10px auto;
+	padding: 2px;
+	border: 2px solid #dfdfdf;
+	border-radius: 8px;
+}
+
+.media-progress-bar div {
+	height: 8px;
+	min-width: 8px;
+	width: 0;
+	background: #dfdfdf;
+	border-radius: 10px;
+	-webkit-transition: width 200ms;
+	-moz-transition:    width 200ms;
+	-ms-transition:     width 200ms;
+	-o-transition:      width 200ms;
+	transition:         width 200ms;
+}
+
+.attachment-thumbnail .media-progress-bar {
+	position: absolute;
+	top: 50%;
+	left: 15%;
+	width: 70%;
+	margin: -8px 0 0 -4px;
+}
