Add progress bar to the persistent upload pane. Remove the ProgressBar view; it was overkill.
git-svn-id: https://plugins.svn.wordpress.org/mosaic/branches/dev@591809 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/mosaic.css
+++ b/css/mosaic.css
@@ -261,3 +261,12 @@
 	width: 70%;
 	margin: -8px 0 0 -4px;
 }
+
+.upload-attachments .media-progress-bar {
+	margin-top: 80px;
+	display: none;
+}
+
+.uploading .upload-attachments .media-progress-bar {
+	display: block;
+}
