Add auto-caching media.query and media.Query. Does not instantly generate results from a single library, but does keep all queries cached.
This has broken a few things. Ordering in watched queries is broken, so maintaining sort order should be added as an option. media.Query objects probably should not auto-watch Attachments.all.


git-svn-id: https://plugins.svn.wordpress.org/mosaic/branches/dev@592184 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/mosaic.css
+++ b/css/mosaic.css
@@ -165,6 +165,14 @@
 	border: 1px solid #dfdfdf;
 }
 
+.attachment:hover {
+	border-color: #d54e21;
+}
+
+.attachment.selected {
+	border-color: #21759b;
+}
+
 .attachment-thumbnail {
 	position: absolute;
 	top: 0;
